--- a/week4/assignment3/package.json
+++ b/week4/assignment3/package.json
@@ -2,7 +2,7 @@
   "name": "assignment3",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://candyho-learning.github.io/remote-assignments/week4/assignment3",
+  "homepage": "https://candyho-learning.github.io/remote-assignments",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
